[package]
name = "limon-core"
version = "0.2.5"
authors = ["Andrey Doroschenko <andrey.daraschenka@gmail.com>"]
edition = "2024"
description = "limon core library"
readme = "README.md"
repository = "https://github.com/limon-sh/limon-core"
license = "Apache-2.0"
keywords = ["limon", "observability", "monitoring"]
exclude = [".github/"]

[dependencies]
time = "0.3.43"
thiserror = "2.0.16"
fastping-rs = "0.2.4"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = [ "macros", "rt-multi-thread", "sync" ] }
trust-dns-resolver = { version = "0.23.2", features = [ "tokio-runtime" ] }
curl = { version = "0.4.49", features = [ "http2" ] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4.4"
httpmock = "0.8.0-alpha.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
